apps/home-assistant/zwave-js-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zwave-js-ui
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: zwave-js-ui
spec:
  selector:
    app.kubernetes.io/name: zwave-js-ui
  ports:
    - name: http
      port: 8091
      targetPort: http
    - name: websocket
      port: 3000
      targetPort: websocket
